Fixed spacing issue in sidebar

--- a/ynab/src/styles/scss/App.scss
+++ b/ynab/src/styles/scss/App.scss
@@ -1,8 +1,5 @@
 .App {
   display: flex;
-  height: 100vh;
-}
-
-* {
-  border: 1px red double; 
+  position: absolute;
+  height: 100%;
 }
