--- a/ynab/src/styles/scss/SideBar.scss
+++ b/ynab/src/styles/scss/SideBar.scss
@@ -4,9 +4,12 @@
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 400px;
   background-color: colors.$dark-blue;
+}
+
+.account-header {
+  margin-bottom: dimens.$large;
 }
 
 .current-budget {
@@ -18,9 +21,41 @@
   color: colors.$account-text;
   margin: dimens.$small dimens.$small dimens.$large dimens.$small;
 }
+.overview-sections {
+  margin: 0;
+}
 
 .page-overview {
-  margin: dimens.$medium;
+  padding: dimens.$medium;
   color: colors.$white;
   background-color: colors.$light-blue;
+}
+
+.all-acounts {
+}
+
+.budget-header {
+  display: flex;
+  justify-content: space-between;
+  padding: dimens.$medium;
+  font-weight: bold;
+  color: colors.$white;
+}
+
+.budget-title {
+  font-weight: bold;
+  color: colors.$white;
+}
+
+.budget-total-amount {
+  font-weight: bold;
+  color: colors.$white;
+}
+
+.account {
+  display: flex;
+  justify-content: space-between;
+  padding: dimens.$large;
+  font-weight: bold;
+  color: colors.$white;
 }
