--- a/ynab/src/styles/scss/_colors.scss
+++ b/ynab/src/styles/scss/_colors.scss
@@ -3,6 +3,7 @@
 $light-blue: #4795d8;
 $dark-blue: #244564;
 $light-green: #cdea9f;
+$orange: #ffd570;
 
 // Outline of "Add Account button
 $add-account-button: #45607b;
